# BuildWithData

./: README.md
c++/: CMakeLists.txt
c++/data_structures/: Node.h  Queue.cpp  Queue.h  Stack.cpp
c++/db/: DatabaseConnector.cpp  DatabaseConnector.h
c++/main/: main.cpp
c++/models/: Task.cpp  Task.h  UndoAction.h  User.cpp  User.h
python/: config.py
python/data_structures/: node.py  priority_queue.py  queue.py  stack.py
python/db/: database.py  init_db.sql
python/main/: app.py
python/models/: task.py  user.py
